--- a/Rock, Paper, Scissors/Base.lproj/Main.storyboard
+++ b/Rock, Paper, Scissors/Base.lproj/Main.storyboard
@@ -17,23 +17,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="H8X-mn-0bC">
-                                <rect key="frame" x="5" y="48.999999999999972" width="418" height="468.33333333333326"/>
+                                <rect key="frame" x="5" y="48.999999999999972" width="418" height="420.33333333333326"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Winner!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bbg-Hm-fhi">
-                                        <rect key="frame" x="0.0" y="0.0" width="418" height="48"/>
-                                        <color key="backgroundColor" systemColor="systemGreenColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="40"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your choice                              Computer choice" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eCN-yS-4ec">
-                                        <rect key="frame" x="0.0" y="48" width="418" height="20.333333333333329"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="418" height="20.333333333333332"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="YSg-hy-7nh">
-                                        <rect key="frame" x="0.0" y="68.333333333333314" width="418" height="150"/>
+                                        <rect key="frame" x="0.0" y="20.333333333333329" width="418" height="150"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0XE-P6-a4J">
                                                 <rect key="frame" x="0.0" y="0.0" width="204" height="150"/>
@@ -47,7 +40,7 @@
                                         </constraints>
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PPQ-oH-mBB">
-                                        <rect key="frame" x="0.0" y="218.33333333333331" width="418" height="100"/>
+                                        <rect key="frame" x="0.0" y="170.33333333333334" width="418" height="100.00000000000003"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Click one, Rock, Paper, or Scissors." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mBA-dM-FS2">
                                                 <rect key="frame" x="0.0" y="79" width="418" height="20.333333333333329"/>
@@ -63,15 +56,15 @@
                                         </constraints>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="hAf-t7-s69">
-                                        <rect key="frame" x="0.0" y="318.33333333333331" width="418" height="150"/>
+                                        <rect key="frame" x="0.0" y="270.33333333333331" width="418" height="150"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Scissors" translatesAutoresizingMaskIntoConstraints="NO" id="cSn-PD-KUW">
                                                 <rect key="frame" x="0.0" y="0.0" width="126" height="150"/>
                                             </imageView>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="TheRock" translatesAutoresizingMaskIntoConstraints="NO" id="oqb-90-EUW">
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="2" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="TheRock" translatesAutoresizingMaskIntoConstraints="NO" id="oqb-90-EUW">
                                                 <rect key="frame" x="146" y="0.0" width="126" height="150"/>
                                             </imageView>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="2" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Paper" translatesAutoresizingMaskIntoConstraints="NO" id="CEw-aY-rtn">
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Paper" translatesAutoresizingMaskIntoConstraints="NO" id="CEw-aY-rtn">
                                                 <rect key="frame" x="292" y="0.0" width="126" height="150"/>
                                             </imageView>
                                         </subviews>
@@ -85,6 +78,14 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Rb0-vE-aCy">
+                                <rect key="frame" x="0.0" y="504" width="418" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -97,6 +98,7 @@
                     <connections>
                         <outlet property="computerChoice" destination="E18-nF-1rY" id="rzt-9h-TSd"/>
                         <outlet property="gameMovesView" destination="hAf-t7-s69" id="tO9-Yd-I4K"/>
+                        <outlet property="textView" destination="Rb0-vE-aCy" id="5r7-Gc-0mh"/>
                         <outlet property="yourChoice" destination="0XE-P6-a4J" id="2V3-yH-rGJ"/>
                         <outletCollection property="rockPaperScissors" destination="cSn-PD-KUW" collectionClass="NSMutableArray" id="TTb-NK-ZQ7"/>
                         <outletCollection property="rockPaperScissors" destination="oqb-90-EUW" collectionClass="NSMutableArray" id="nZj-oe-CNH"/>
@@ -117,11 +119,11 @@
         <image name="Paper" width="1263" height="1155"/>
         <image name="Scissors" width="494" height="403"/>
         <image name="TheRock" width="1439" height="800"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
